Change function views to class based views, clear project

--- a/passwords/templates/password/password_list.html
+++ b/passwords/templates/password/password_list.html
@@ -9,7 +9,7 @@
             <script src="{% static 'show.js' %}"></script>
 {% endblock %}
 {% block content %}
-
+    {% if passwords %}
     <div class="table-responsive">
     <h2>List of passwords</h2>
         <table class="table table-bordered table-striped" id="passwordList">
@@ -23,17 +23,17 @@
             </tr>
         </thead>
         <tbody>
-        {% for password in passwords %}
-            <tr>
-                <td>{{ forloop.counter }}</td>
-                <td>{{ password.date }}</td>
-                <td>{{ password.site_url }}</td>
-                <td>{{ password.login }}</td>
-                <td>{% csrf_token %}<button class="btn btn-primary show_password" id="{{ password.pk }}">Show password</button>
-                    <button class="btn btn-primary check_password" data-check="True" id="{{ password.pk }}">Check if pwned</button>
-                <a class="btn btn-danger delete_password" href="{% url 'password_delete' pk=password.pk %}">Delete</a></td>
-            </tr>
-        {% endfor %}
+            {% for password in passwords %}
+                <tr>
+                    <td>{{ forloop.counter }}</td>
+                    <td>{{ password.date }}</td>
+                    <td>{{ password.site_url }}</td>
+                    <td>{{ password.login }}</td>
+                    <td>{% csrf_token %}<button class="btn btn-primary show_password" id="{{ password.pk }}">Show password</button>
+                        <button class="btn btn-primary check_password" data-check="True" id="{{ password.pk }}">Check if pwned</button>
+                    <a class="btn btn-danger delete_password" href="{% url 'password_delete' pk=password.pk %}">Delete</a></td>
+                </tr>
+            {% endfor %}
         </tbody>
         </table>
     </div>
@@ -55,5 +55,8 @@
                 </div>
             </div>
     </div>
+    {% else %}
+    <h1>No passwords saved</h1>
+    {% endif %}
 
 {% endblock %}
