Add two-factor authorization, clean settings

--- a/passwords/templates/auth/logged_out.html
+++ b/passwords/templates/auth/logged_out.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Logged out</h2>
-    <p>You have been logged out to login again click <a href="{% url 'login' %}">here.</a></p>
+    <p>You have been logged out to login again click <a href="{% url 'two_factor:login' %}">here.</a></p>
 
 {% endblock content %}
