--- a/passwords/templates/auth/password_reset_done.html
+++ b/passwords/templates/auth/password_reset_done.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
         <h2>Check your email for reset link</h2>
-        <p>Click <a href="{% url 'login' %}">here</a> to login.</p>
+        <p>Click <a href="{% url 'two_factor:login' %}">here</a> to login.</p>
 
 {% endblock %}
