--- a/passwords/templates/base.html
+++ b/passwords/templates/base.html
@@ -28,10 +28,11 @@
         <!-- Navbar Right Side -->
         <div class="navbar-nav">
             {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'two_factor:profile' %}">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'password_change' %}">Change password</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
             {% else %}
-                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                <a class="nav-item nav-link" href="{% url 'two_factor:login' %}">Login</a>
                 <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
             {% endif %}
         </div>
